reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_941_col_5.log

*** crates/tracewake-core/src/events/apply.rs:941:5: replace parse_alternatives -> std::collections::BTreeSet<String> with BTreeSet::new()

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_alternatives -> std::collections::BTreeSet<String> with BTreeSet::new()
@@ -933,21 +933,17 @@
     );
     if let Some(alternatives) = payload.get("alternatives") {
         observation = observation.with_alternatives(parse_alternatives(alternatives));
     }
     Ok(observation)
 }
 
 fn parse_alternatives(value: &str) -> std::collections::BTreeSet<String> {
-    value
-        .split(',')
-        .filter(|part| !part.is_empty())
-        .map(ToString::to_string)
-        .collect()
+    BTreeSet::new() /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_contradiction_payload(
     payload: &BTreeMap<&str, &str>,
 ) -> Result<Contradiction, EpistemicApplyError> {
     Ok(Contradiction::new(
         parse_contradiction_id(payload, "contradiction_id")?,
         parse_actor_id_epistemic(payload, "holder_actor_id")?,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0433]: failed to resolve: use of undeclared type `BTreeSet`
   --> crates/tracewake-core/src/events/apply.rs:941:5
    |
941 |     BTreeSet::new() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^ use of undeclared type `BTreeSet`
    |
help: consider importing this struct
    |
  1 + use std::collections::BTreeSet;
    |

error[E0433]: failed to resolve: use of undeclared type `BTreeSet`
   --> crates/tracewake-core/src/events/apply.rs:941:5
    |
941 |     BTreeSet::new() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^ use of undeclared type `BTreeSet`
    |
    = note: struct `crate::state::tests::BTreeSet` exists but is inaccessible
help: consider importing this struct
    |
  1 + use std::collections::BTreeSet;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
